@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.13) unstable; urgency=low
 
   * fcgi-request: duplicate socket path
+  * fcgi-client: provide SCRIPT_FILENAME
 
  --
 
